version=1.1.5

1.1.5 - Added diskio and fortune to conky
        Added fortune installation option.
        Added xscreensaver install.
        Added Disk IO display to conky

1.1.4 - Updates to the updates.sh

1.1.3 - Added set_wallpaper.sh
        Added second conky to display solar conditions gif

1.1.2 - Added set_default_res.sh
        Added solar conditions to conky
      
1.1.1 - Added Neofetch and CommanderPi
        Added conky-medium-adif

1.1.0 - Added gnome disk utility and Raspberry Pi Imager.

1.0.0 	Initial Release
				