@@ -77,7 +77,7 @@ conky.text = [[
 ${voffset 15}
 ${font Arial:size=20}${color Yellow}${alignc}N0CALL
 ${voffset -40}
-${font Arial:bold:size=14}${color White}Gridsquare ${alignr}${color Yellow}${execi 25 $HOME/bin/conky/grid | cut -c1-12} 
+${font Arial:bold:size=12}${color White}Gridsquare ${alignr}${color Yellow}${exec cat $HOME/bin/conky/Grid.txt}
 ${font Arial:bold:size=14}${color White}Radio Freq ${alignr}${color Yellow}${execi 5 $HOME/bin/conky/get-freq}
 ${color Yellow}LOCAL${alignr}ZULU
 ${font Arial:bold:size=14}${color White}${time %H:%M:%S}\
